updated file path

--- a/content/docs/Interviews-Preparation/001-verifone-interviews.mdx
+++ b/content/docs/Interviews-Preparation/001-verifone-interviews.mdx
@@ -1,5 +1,5 @@
 ---
-title: Interviews 001
+title: Verifone
 ---
 
 Here’s a **comprehensive list of Verifone interview questions** categorized by experience level—from 2 to 10 years. This list is designed for Software Engineers/Java Developers and reflects topics Verifone emphasizes in actual interviews.
